<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_basic"
            android:background="@drawable/ic_replay"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/primaryColor"
            android:padding="@dimen/margin_basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/status_label"
                android:layout_margin="@dimen/margin_basic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/status"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/gender_label"
                android:gravity="center_horizontal"/>
            <RadioGroup
                android:id="@+id/status_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/status_label"
                android:checkedButton="@id/status_unknown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/status_label"
                android:gravity="start">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/status_unknown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_basic"
                    android:text="@string/unknown"
                    android:textColor="@color/primaryTextColor"
                    app:buttonTint="@color/secondaryTextColor" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/status_alive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_basic"
                    android:text="@string/alive"
                    android:textColor="@color/primaryTextColor"
                    app:buttonTint="@color/secondaryTextColor" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/status_dead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_basic"
                    android:text="@string/dead"
                    android:textColor="@color/primaryTextColor"
                    app:buttonTint="@color/secondaryTextColor" />
            </RadioGroup>
            <TextView
                android:id="@+id/gender_label"
                android:layout_margin="@dimen/margin_basic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/status_group"
                android:text="@string/gender"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/status_label"
                android:gravity="center_horizontal"/>
            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:checkedButton="@id/gender_unknown"
                app:layout_constraintStart_toStartOf="@id/gender_label"
                app:layout_constraintTop_toBottomOf="@id/gender_label"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="@id/gender_label">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/gender_unknown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_basic"
                    android:text="@string/unknown"
                    android:textColor="@color/primaryTextColor"
                    app:buttonTint="@color/secondaryTextColor" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_basic"
                    android:text="@string/female"
                    android:textColor="@color/primaryTextColor"
                    app:buttonTint="@color/secondaryTextColor" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_basic"
                    android:text="@string/male"
                    android:textColor="@color/primaryTextColor"
                    app:buttonTint="@color/secondaryTextColor" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/gender_genderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_basic"
                    android:text="@string/genderless"
                    android:textColor="@color/primaryTextColor"
                    app:buttonTint="@color/secondaryTextColor" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
